--- a/general/templates/general/partials/footer.html
+++ b/general/templates/general/partials/footer.html
@@ -12,7 +12,7 @@
           </div>
           <div class="col-lg-12">
             <div class="copyright-text">
-              <p>Copyright 2020 Stand Blog Co.
+              <p>Copyright {% now 'Y' %} Stand Blog Co.
                     
                  | Design: <a rel="nofollow" href="https://templatemo.com" target="_parent">TemplateMo</a></p>
             </div>
