--- a/general/templates/general/home.html
+++ b/general/templates/general/home.html
@@ -138,41 +138,42 @@
           <div class="col-lg-8">
             <div class="all-blog-posts">
               <div class="row">
+
+                {% for post in posts %}
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
                       <img src="assets/images/blog-post-01.jpg" alt="">
                     </div>
                     <div class="down-content">
-                      <span>Lifestyle</span>
-                      <a href="post-details.html"><h4>Best Template Website for HTML CSS</h4></a>
+                      <span>{{ post.category }}</span>
+                      <a href="{% url 'blog:post-detail' post.slug %}"><h4>{{ post.title }}</h4></a>
                       <ul class="post-info">
-                        <li><a href="#">Admin</a></li>
-                        <li><a href="#">May 31, 2020</a></li>
+                        <li><a href="#">{{ post.author }}</a></li>
+                        <li><a href="#">{{ post.date_created|date:"M, d, Y" }}</a></li>
+
                         <li><a href="#">12 Comments</a></li>
                       </ul>
-                      <p>Stand Blog is a free HTML CSS template for your CMS theme. You can easily adapt or customize it for any kind of CMS or website builder. You are allowed to use it for your business. You are NOT allowed to re-distribute the template ZIP file on any template collection site for the download purpose. <a rel="nofollow" href="https://templatemo.com/contact" target="_parent">Contact TemplateMo</a> for more info. Thank you.</p>
+                      <p>{{ post.body|truncatewords:100 }}</p>
                       <div class="post-options">
                         <div class="row">
                           <div class="col-6">
                             <ul class="post-tags">
                               <li><i class="fa fa-tags"></i></li>
-                              <li><a href="#">Beauty</a>,</li>
-                              <li><a href="#">Nature</a></li>
+                              {% for tag in post.tags.all %}
+                              <li><a href="#">{{ tag|lower }} {% if not forloop.last %}, {% endif %}</a></li>
+                              {% endfor %}
                             </ul>
                           </div>
-                          <div class="col-6">
-                            <ul class="post-share">
-                              <li><i class="fa fa-share-alt"></i></li>
-                              <li><a href="#">Facebook</a>,</li>
-                              <li><a href="#"> Twitter</a></li>
-                            </ul>
-                          </div>
+
                         </div>
                       </div>
                     </div>
                   </div>
                 </div>
+                {% endfor %}
+                
+                
                 <div class="col-lg-12">
                   <div class="blog-post">
                     <div class="blog-thumb">
@@ -235,12 +236,14 @@
                             <ul class="post-share">
                               <li><i class="fa fa-share-alt"></i></li>
                               <li><a href="#">Facebook</a>,</li>
-                              <li><a href="#">Twitter</a></li>
+                                <li><a href="#">Twitter</a></li>
                             </ul>
                           </div>
                         </div>
                       </div>
                     </div>
+
+
                   </div>
                 </div>
                 <div class="col-lg-12">
@@ -249,7 +252,7 @@
                   </div>
                 </div>
               </div>
-
+ 
 
 {% include 'general/partials/sidebar.html' %}
 
